# fabric-mcp-demo

./: .env.example  .gitignore  DEPLOYMENT_CHECKLIST.md  Dockerfile  FINAL_SUMMARY.md  FRONTEND_COMPLETE.md  GETTING_STARTED.md  IMPLEMENTATION_STATUS.md  IMPLEMENTATION_SUMMARY.md  PROJECT_COMPLETE.md  QUICKSTART.md  QUICK_REFERENCE.md  README.md  TESTING.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml
config/: default.yaml  tenants.yaml
docs/: SECURITY_SETUP.md  api-spec.yaml  branding-guide.md  deployment.md  disaster-recovery.md
infra/: README.md  main.bicep  parameters.dev.json  parameters.prod.json
infra/workbooks/: README.md  cost-analysis.json  tenant-usage.json
scripts/: init_local.sh  provision_azure.sh  setup_github_secrets.sh
src/app/: __init__.py  config.py  dependencies.py  main.py
src/app/middleware/: __init__.py  cost_gate.py  setup_guard.py  telemetry.py  tenant.py
src/app/models/: __init__.py  agent.py  chat.py  cost.py  notification.py  setup.py  tenant.py  usage.py
src/app/routers/: __init__.py  admin.py  agents.py  branding.py  budgets.py  chat.py  costs.py  health.py  notifications.py  tenant.py
src/app/services/: __init__.py  branding_service.py  budget_enforcer.py  cost_tracker.py  foundry_client.py  notification_service.py  rate_limiter.py  tenant_manager.py
src/app/startup/: __init__.py  discovery.py  init_tenants.py
tests/: conftest.py  test_api.py
web/: README.md  index.html  package-lock.json  package.json
web/src/: App.tsx  main.tsx
web/src/api/: client.ts  services.ts
web/src/components/: Layout.tsx  ui.tsx
web/src/context/: TenantContext.tsx  ThemeContext.tsx
web/src/pages/: Admin.tsx  Chat.tsx
web/src/styles/: app.css  (+1 more)
(+10 files in other folders)
